* Xcode documentation integration note * redirect to documentation index page in .dmg * Version number * tweaks to mainpage

--- a/Info.plist
+++ b/Info.plist
@@ -22,5 +22,7 @@
 	<string>0.3</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
 </dict>
 </plist>
